srcs/tester/base/stack/top/log.txt
./base/stack/top/patched.cpp:7:2: error: use of undeclared identifier 'ft'
 ft::stack<int> mystack;
 ^
./base/stack/top/patched.cpp:9:2: error: use of undeclared identifier 'mystack'
 mystack.push(10);
 ^
./base/stack/top/patched.cpp:10:2: error: use of undeclared identifier 'mystack'
 mystack.push(20);
 ^
./base/stack/top/patched.cpp:12:2: error: use of undeclared identifier 'mystack'
 mystack.top() -= 5;
 ^
./base/stack/top/patched.cpp:14:42: error: use of undeclared identifier 'mystack'
 std::cout << "mystack.top() is now " << mystack.top() << '\n';
                                         ^
5 errors generated.
